hphp/hack/test/typecheck/tconst/constructor_error.php.exp
File "constructor_error.php", line 14, characters 26-27:
Invalid argument (Typing[4110])
File "constructor_error.php", line 8, characters 39-45:
Expected this::T
File "constructor_error.php", line 14, characters 26-27:
But got string
